test/Fail/Issue7033a.err
Issue7033a.agda:20.12-86: error: [UnequalTypes]
The type
  hcomp (λ i → isOneEmpty) (transp (λ i → Set) i0 (onS¹ base))
is not a subtype of
  ⊥
when checking that the expression
transp
(λ i₁ → onS¹ (hcomp {φ = ~ i₁} (λ { j (i₁ = i0) → base }) base)) i0
tt
has type ⊥
